--- a/src/nunit.xamarin/nunit.xamarin.csproj
+++ b/src/nunit.xamarin/nunit.xamarin.csproj
@@ -29,7 +29,9 @@ Supported Xamarin platforms:
 
   <ItemGroup>
     <PackageReference Include="NUnit" Version="[3.10.1]" />
-    <PackageReference Include="Xamarin.Forms" Version="2.5.0.280555" />
+    <PackageReference Include="Xamarin.Forms" Version="4.5.0.396" />
+    <PackageReference Include="MobCAT" Version="1.0.7306" />
+    <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
   </ItemGroup>
 
   <ItemGroup>
